# dithr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  msrv.yml  scheduled.yml
benches/: advanced.rs  common.rs  diffusion.rs  ordered.rs  stochastic.rs  yliluoma.rs
examples/: gray_buffer.rs  image_bayer_png.rs  image_palette_png.rs  indexed_palette.rs  rgb_buffer.rs
src/: adapter.rs  buffer.rs  dbs.rs  dot_diffusion.rs  error.rs  lib.rs  palette.rs  quantize.rs  riemersma.rs  stochastic.rs
src/core/: layout.rs  mod.rs  pixel.rs  sample.rs
src/data/: kernels.rs  maps.rs  mod.rs  palettes.rs  variable.rs
src/diffusion/: block.rs  classic.rs  core.rs  extended.rs  mod.rs  variable.rs
src/math/: color.rs  fixed.rs  matrix.rs  mod.rs  utils.rs
src/ordered/: adaptive.rs  am_fm.rs  bayer.rs  cluster.rs  core.rs  image_based_screen.rs  mod.rs  multitone.rs  polyomino.rs  ranked.rs  space_filling.rs  stochastic_cluster.rs  void_cluster.rs  yliluoma.rs
tests/: advanced.rs  basic.rs  diffusion.rs  golden.rs  ordered.rs
tests/common/: mod.rs
