[package]
name = "dithr"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
autobenches = false
license = "GPL-3.0-only"
description = "Buffer-first dithering and halftoning algorithms."

[features]
default = ["std"]
std = []
rayon = ["dep:rayon"]
image = ["dep:image"]

[dependencies]
rayon = { version = "1.11.0", optional = true }
image = { version = "0.24.9", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stochastic"
harness = false

[[bench]]
name = "ordered"
harness = false

[[bench]]
name = "yliluoma"
harness = false

[[bench]]
name = "diffusion"
harness = false

[[bench]]
name = "advanced"
harness = false
