[package]
name = "dithr"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
keywords = ["graphics", "dithering", "halftoning", "image", "quantization"]
categories = ["graphics", "multimedia::images", "algorithms"]
license = "MIT"
description = "Buffer-first rust dithering and halftoning library."
exclude = [".github/**/*", "crates/**/*", "examples/**/*"]
readme = "README.md"
documentation = "https://docs.rs/dithr"
repository = "https://github.com/pbkx/dithr"
autobenches = false

[features]
default = ["std"]
std = []
rayon = ["dep:rayon"]
image = ["dep:image"]

[dependencies]
rayon = { version = "1.11.0", optional = true }
image = { version = "0.24.9", default-features = false, optional = true, features = ["png", "jpeg"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "stochastic"
harness = false

[[bench]]
name = "ordered"
harness = false

[[bench]]
name = "yliluoma"
harness = false

[[bench]]
name = "diffusion"
harness = false

[[bench]]
name = "advanced"
harness = false
